<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clickable="true">

    <TextView
        android:id="@+id/player_complete_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="41dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:text=""
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="end"
        android:drawablePadding="22dp"
        android:drawableLeft="@drawable/player_btn_back_selector"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/player_complete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:text="@string/player_load_status_view_text_finish"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/player_complete_btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="visible"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@drawable/player_btn_text_selector"
                android:text="@string/player_load_status_view_btn_replay"
                android:background="@drawable/player_btn_bg_selector"/>
            <TextView
                android:id="@+id/player_complete_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@drawable/player_btn_text_selector"
                android:text="@string/player_load_status_view_btn_cancel"
                android:background="@drawable/player_btn_bg_selector"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
